tests/fixtures/errors/bare_union_binding.z
# E0300: a bare union name does not construct; select an arm.
Holder: union {
    num: i64
    txt: String
}

main: function is {
    h: Holder
    print "\{h.num}"
}
